buildsystem,ide,epj2make; sorted out platform variables and uses. now using HOST_PLATFORM, TARGET_PLATFORM, *_HOST and *_TARGET variables. (#765)

--- a/compiler/Makefile
+++ b/compiler/Makefile
@@ -5,6 +5,7 @@ CONFIG := release
 OBJ = libec/obj/$(CONFIG).$(PLATFORM)/
 PRECOMPILED_SOURCES = libec/precompiled/expression.c libec/precompiled/grammar.c libec/precompiled/type.c
 
+include ../crossplatform.mk
 include ../include.mk
 
 all: ecp ecc ecs
