--- a/ecere/Makefile.vanilla
+++ b/ecere/Makefile.vanilla
@@ -39,33 +39,33 @@ OBJECTS1 = \
 	$(OBJ)System.c.o \
 	$(OBJ)i18n.o \
 	$(OBJ)BMPFormat.o \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-freetype.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-unicode-tables.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-unicode.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-arabic.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-buffer.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-gdef.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-gpos.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-gsub.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-hangul.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-hebrew.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-indic.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-khmer.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-myanmar.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-open.o)
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-freetype.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-unicode-tables.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-unicode.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-arabic.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-buffer.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-gdef.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-gpos.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-gsub.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-hangul.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-hebrew.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-indic.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-khmer.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-myanmar.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-open.o)
 OBJECTS2 = \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-shaper.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-stream.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-tibetan.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-impl.o) \
-	$(if $(WINDOWS),,$(OBJ)harfbuzz-thai.o) \
-	$(if $(WINDOWS),$(OBJ)GDIDisplayDriver.o,) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-shaper.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-stream.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-tibetan.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-impl.o) \
+	$(if $(WINDOWS_TARGET),,$(OBJ)harfbuzz-thai.o) \
+	$(if $(WINDOWS_TARGET),$(OBJ)GDIDisplayDriver.o,) \
 	$(OBJ)lfbBlit.o \
 	$(OBJ)lfbConvert.o \
 	$(OBJ)LFBDisplayDriver.o \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)NCursesDisplayDriver.o,) \
-	$(if $(OSX),$(OBJ)CocoaOpenGLDisplayDriver.o,) \
-	$(if $(LINUX),$(OBJ)XDisplayDriver.o,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)NCursesDisplayDriver.o,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaOpenGLDisplayDriver.o,) \
+	$(if $(LINUX_TARGET),$(OBJ)XDisplayDriver.o,) \
 	$(OBJ)Bitmap.o \
 	$(OBJ)BitmapResource.o \
 	$(OBJ)Color.o \
@@ -98,13 +98,13 @@ OBJECTS3 = \
 	$(OBJ)MessageBox.o \
 	$(OBJ)ReplaceDialog.o \
 	$(OBJ)WindowList.o \
-	$(if $(OSX),$(OBJ)CocoaDispatch.o,) \
-	$(if $(OSX),$(OBJ)CocoaEcereBridge.o,) \
-	$(if $(OSX),$(OBJ)CocoaInterface.o,) \
-	$(if $(OSX),$(OBJ)EcereView.o,) \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)NCursesInterface.o,) \
-	$(if $(WINDOWS),$(OBJ)Win32Interface.o,) \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)XInterface.o,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaDispatch.o,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaEcereBridge.o,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaInterface.o,) \
+	$(if $(OSX_TARGET),$(OBJ)EcereView.o,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)NCursesInterface.o,) \
+	$(if $(WINDOWS_TARGET),$(OBJ)Win32Interface.o,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)XInterface.o,) \
 	$(OBJ)WindowsSkin.o \
 	$(OBJ)Anchor.o \
 	$(OBJ)ClipBoard.o \
@@ -157,13 +157,13 @@ COBJECTS1 = \
 	$(OBJ)units.c \
 	$(OBJ)i18n.c \
 	$(OBJ)BMPFormat.c \
-	$(if $(WINDOWS),$(OBJ)GDIDisplayDriver.c,) \
+	$(if $(WINDOWS_TARGET),$(OBJ)GDIDisplayDriver.c,) \
 	$(OBJ)lfbBlit.c \
 	$(OBJ)lfbConvert.c \
 	$(OBJ)LFBDisplayDriver.c \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)NCursesDisplayDriver.c,) \
-	$(if $(OSX),$(OBJ)CocoaOpenGLDisplayDriver.c,) \
-	$(if $(LINUX),$(OBJ)XDisplayDriver.c,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)NCursesDisplayDriver.c,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaOpenGLDisplayDriver.c,) \
+	$(if $(LINUX_TARGET),$(OBJ)XDisplayDriver.c,) \
 	$(OBJ)Bitmap.c \
 	$(OBJ)BitmapResource.c \
 	$(OBJ)Color.c \
@@ -196,11 +196,11 @@ COBJECTS2 = \
 	$(OBJ)MessageBox.c \
 	$(OBJ)ReplaceDialog.c \
 	$(OBJ)WindowList.c \
-	$(if $(OSX),$(OBJ)CocoaDispatch.c,) \
-	$(if $(OSX),$(OBJ)CocoaInterface.c,) \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)NCursesInterface.c,) \
-	$(if $(WINDOWS),$(OBJ)Win32Interface.c,) \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)XInterface.c,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaDispatch.c,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaInterface.c,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)NCursesInterface.c,) \
+	$(if $(WINDOWS_TARGET),$(OBJ)Win32Interface.c,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)XInterface.c,) \
 	$(OBJ)WindowsSkin.c \
 	$(OBJ)Anchor.c \
 	$(OBJ)ClipBoard.c \
@@ -251,13 +251,13 @@ SYMBOLS1 = \
 	$(OBJ)units.sym \
 	$(OBJ)i18n.sym \
 	$(OBJ)BMPFormat.sym \
-	$(if $(WINDOWS),$(OBJ)GDIDisplayDriver.sym,) \
+	$(if $(WINDOWS_TARGET),$(OBJ)GDIDisplayDriver.sym,) \
 	$(OBJ)lfbBlit.sym \
 	$(OBJ)lfbConvert.sym \
 	$(OBJ)LFBDisplayDriver.sym \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)NCursesDisplayDriver.sym,) \
-	$(if $(OSX),$(OBJ)CocoaOpenGLDisplayDriver.sym,) \
-	$(if $(LINUX),$(OBJ)XDisplayDriver.sym,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)NCursesDisplayDriver.sym,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaOpenGLDisplayDriver.sym,) \
+	$(if $(LINUX_TARGET),$(OBJ)XDisplayDriver.sym,) \
 	$(OBJ)Bitmap.sym \
 	$(OBJ)BitmapResource.sym \
 	$(OBJ)Color.sym \
@@ -290,11 +290,11 @@ SYMBOLS2 = \
 	$(OBJ)MessageBox.sym \
 	$(OBJ)ReplaceDialog.sym \
 	$(OBJ)WindowList.sym \
-	$(if $(OSX),$(OBJ)CocoaDispatch.sym,) \
-	$(if $(OSX),$(OBJ)CocoaInterface.sym,) \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)NCursesInterface.sym,) \
-	$(if $(WINDOWS),$(OBJ)Win32Interface.sym,) \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)XInterface.sym,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaDispatch.sym,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaInterface.sym,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)NCursesInterface.sym,) \
+	$(if $(WINDOWS_TARGET),$(OBJ)Win32Interface.sym,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)XInterface.sym,) \
 	$(OBJ)WindowsSkin.sym \
 	$(OBJ)Anchor.sym \
 	$(OBJ)ClipBoard.sym \
@@ -346,13 +346,13 @@ IMPORTS1 = \
 	$(OBJ)units.imp \
 	$(OBJ)i18n.imp \
 	$(OBJ)BMPFormat.imp \
-	$(if $(WINDOWS),$(OBJ)GDIDisplayDriver.imp,) \
+	$(if $(WINDOWS_TARGET),$(OBJ)GDIDisplayDriver.imp,) \
 	$(OBJ)lfbBlit.imp \
 	$(OBJ)lfbConvert.imp \
 	$(OBJ)LFBDisplayDriver.imp \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)NCursesDisplayDriver.imp,) \
-	$(if $(OSX),$(OBJ)CocoaOpenGLDisplayDriver.imp,) \
-	$(if $(LINUX),$(OBJ)XDisplayDriver.imp,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)NCursesDisplayDriver.imp,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaOpenGLDisplayDriver.imp,) \
+	$(if $(LINUX_TARGET),$(OBJ)XDisplayDriver.imp,) \
 	$(OBJ)Bitmap.imp \
 	$(OBJ)BitmapResource.imp \
 	$(OBJ)Color.imp \
@@ -385,11 +385,11 @@ IMPORTS2 = \
 	$(OBJ)MessageBox.imp \
 	$(OBJ)ReplaceDialog.imp \
 	$(OBJ)WindowList.imp \
-	$(if $(OSX),$(OBJ)CocoaDispatch.imp,) \
-	$(if $(OSX),$(OBJ)CocoaInterface.imp,) \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)NCursesInterface.imp,) \
-	$(if $(WINDOWS),$(OBJ)Win32Interface.imp,) \
-	$(if $(or $(LINUX),$(OSX)),$(OBJ)XInterface.imp,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaDispatch.imp,) \
+	$(if $(OSX_TARGET),$(OBJ)CocoaInterface.imp,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)NCursesInterface.imp,) \
+	$(if $(WINDOWS_TARGET),$(OBJ)Win32Interface.imp,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),$(OBJ)XInterface.imp,) \
 	$(OBJ)WindowsSkin.imp \
 	$(OBJ)Anchor.imp \
 	$(OBJ)ClipBoard.imp \
@@ -444,33 +444,33 @@ SOURCES1 = \
 	src/sys/System.c \
 	src/sys/i18n.ec \
 	src/gfx/bitmaps/BMPFormat.ec \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/unicode/harfbuzz-freetype.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/unicode/harfbuzz-unicode-tables.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/unicode/harfbuzz-unicode.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-arabic.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-buffer.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-gdef.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-gpos.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-gsub.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-hangul.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-hebrew.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-indic.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-khmer.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-myanmar.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-open.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-shaper.c)
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/unicode/harfbuzz-freetype.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/unicode/harfbuzz-unicode-tables.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/unicode/harfbuzz-unicode.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-arabic.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-buffer.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-gdef.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-gpos.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-gsub.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-hangul.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-hebrew.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-indic.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-khmer.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-myanmar.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-open.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-shaper.c)
 SOURCES2 = \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-stream.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-tibetan.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-impl.c) \
-	$(if $(WINDOWS),,src/gfx/drivers/harfbuzz/harfbuzz-thai.c) \
-	$(if $(WINDOWS),src/gfx/drivers/GDIDisplayDriver.ec,) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-stream.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-tibetan.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-impl.c) \
+	$(if $(WINDOWS_TARGET),,src/gfx/drivers/harfbuzz/harfbuzz-thai.c) \
+	$(if $(WINDOWS_TARGET),src/gfx/drivers/GDIDisplayDriver.ec,) \
 	src/gfx/drivers/lfbBlit.ec \
 	src/gfx/drivers/lfbConvert.ec \
 	src/gfx/drivers/LFBDisplayDriver.ec \
-	$(if $(or $(LINUX),$(OSX)),src/gfx/drivers/NCursesDisplayDriver.ec,) \
-	$(if $(OSX),src/gfx/drivers/CocoaOpenGLDisplayDriver.ec,) \
-	$(if $(LINUX),src/gfx/drivers/XDisplayDriver.ec,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),src/gfx/drivers/NCursesDisplayDriver.ec,) \
+	$(if $(OSX_TARGET),src/gfx/drivers/CocoaOpenGLDisplayDriver.ec,) \
+	$(if $(LINUX_TARGET),src/gfx/drivers/XDisplayDriver.ec,) \
 	src/gfx/Bitmap.ec \
 	src/gfx/BitmapResource.ec \
 	src/gfx/Color.ec \
@@ -503,13 +503,13 @@ SOURCES2 = \
 	src/gui/dialogs/ReplaceDialog.ec
 SOURCES3 = \
 	src/gui/dialogs/WindowList.ec \
-	$(if $(OSX),src/gui/drivers/cocoa/CocoaDispatch.ec,) \
-	$(if $(OSX),src/gui/drivers/cocoa/CocoaEcereBridge.m,) \
-	$(if $(OSX),src/gui/drivers/cocoa/CocoaInterface.ec,) \
-	$(if $(OSX),src/gui/drivers/cocoa/EcereView.m,) \
-	$(if $(or $(LINUX),$(OSX)),src/gui/drivers/NCursesInterface.ec,) \
-	$(if $(WINDOWS),src/gui/drivers/Win32Interface.ec,) \
-	$(if $(or $(LINUX),$(OSX)),src/gui/drivers/XInterface.ec,) \
+	$(if $(OSX_TARGET),src/gui/drivers/cocoa/CocoaDispatch.ec,) \
+	$(if $(OSX_TARGET),src/gui/drivers/cocoa/CocoaEcereBridge.m,) \
+	$(if $(OSX_TARGET),src/gui/drivers/cocoa/CocoaInterface.ec,) \
+	$(if $(OSX_TARGET),src/gui/drivers/cocoa/EcereView.m,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),src/gui/drivers/NCursesInterface.ec,) \
+	$(if $(WINDOWS_TARGET),src/gui/drivers/Win32Interface.ec,) \
+	$(if $(or $(LINUX_TARGET),$(OSX_TARGET)),src/gui/drivers/XInterface.ec,) \
 	src/gui/skins/WindowsSkin.ec \
 	src/gui/Anchor.ec \
 	src/gui/ClipBoard.ec \
@@ -650,6 +650,7 @@ OFLAGS =
 
 # CROSS-PLATFORM MAGIC
 
+include ../crossplatform.mk
 include ../include.mk
 
 # TOOLCHAIN
@@ -674,17 +675,17 @@ LIBS = $(SHAREDLIB) $(EXECUTABLE) $(LINKOPT)
 UPXFLAGS = -9 -q
 
 # HARD CODED PLATFORM-SPECIFIC OPTIONS
-ifdef LINUX
+ifdef LINUX_TARGET
 OFLAGS += -Wl,--no-undefined
 endif
 
-ifdef OSX
+ifdef OSX_TARGET
 OFLAGS += -framework cocoa -framework OpenGL
 endif
 
 # PLATFORM-SPECIFIC OPTIONS
 
-ifdef WINDOWS
+ifdef WINDOWS_TARGET
 
 CFLAGS += \
 	 -I../deps/DirectX-9.0/include \
@@ -696,14 +697,14 @@ CFLAGS += \
 	 -I../deps/glext
 
 else
-ifdef LINUX
+ifdef LINUX_TARGET
 
 CFLAGS += \
 	 -I/usr/include/freetype2 \
 	 -I../deps/libungif-4.1.1/lib
 
 else
-ifdef OSX
+ifdef OSX_TARGET
 
 CFLAGS += \
 	 -I/usr/include/freetype2 \
